cmake_minimum_required(VERSION 3.2)
project(symmetric_rlwe)
set(CMAKE_CXX_STANDARD 11)

set(NTL_HEADER /home/riku/include)
set(NTL_LIB /home/riku/lib)
set(HELIB_HEADER /home/riku/include)
set(HELIB_LIB /home/riku/lib)
include_directories(${NTL_HEADER} ${HELIB_HEADER} include)
link_directories(${NTL_LIB} ${HELIB_LIB})

add_subdirectory(src)

if (ENABLE_TESTS)
    enable_testing()
    find_package(GTest REQUIRED)
    add_subdirectory(test)
endif (ENABLE_TESTS)

find_package(OpenMP)
if (OPENMP_FOUND)
    set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
    set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
endif()
add_executable(main main.cpp)
target_link_libraries(main symrlwe helib ntl pthread gmp)
add_executable(main-2 main-2.cpp)
target_link_libraries(main-2 symrlwe helib ntl pthread gmp)
